--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.6.4",
     "react-countup": "^6.0.0",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-slick": "^0.28.1",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
