--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "isotope-layout": "^3.0.6",
     "next": "11.1.2",
     "react": "17.0.2",
